# Python-Module-00-10

./: .gitignore  README.md
Python Module 00/: README.md
Python Module 00/ex1/: ft_plot_area.py
Python Module 00/ex2/: ft_harvest_total.py
Python Module 00/ex5/: ft_count_harvest_iterative.py  ft_count_harvest_recursive.py
Python Module 00/ex7/: ft_seed_inventory.py
Python Module 01/ex0/: ft_garden_intro.py
Python Module 01/ex1/: ft_garden_data.py
Python Module 01/ex2/: ft_plant_growth.py
Python Module 01/ex3/: ft_plant_factory.py
Python Module 01/ex4/: ft_garden_security.py
Python Module 01/ex5/: ft_plant_types.py
Python Module 01/ex6/: ft_garden_analytics.py
Python Module 02/ex0/: ft_first_exception.py
Python Module 02/ex1/: ft_different_errors.py
Python Module 02/ex2/: ft_custom_errors.py
Python Module 02/ex3/: ft_finally_block.py
Python Module 02/ex4/: ft_raise_errors.py
Python Module 02/ex5/: ft_garden_management.py
Python Module 03/ex0/: ft_command_quest.py
Python Module 03/ex1/: ft_score_analytics.py
Python Module 03/ex2/: ft_coordinate_system.py
Python Module 03/ex3/: ft_achievement_tracker.py
Python Module 03/ex4/: ft_inventory_system.py
Python Module 03/ex5/: ft_data_stream.py
Python Module 03/ex6/: ft_analytics_dashboard.py
Python Module 04/ex4/: create_files.py  (+1 more)
Python Module 06/: README.md  ft_circular_curse.py  ft_import_transmutation.py  ft_pathway_debate.py  ft_sacred_scroll.py
Python Module 07/: README.md
Python Module 08/: README.md
Python Module 08/ex1/: loading.py  pyproject.toml  requirements.txt
(+54 files in other folders)
